# prai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Taskfile.yaml  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Navbar/: Navbar.test.tsx  Navbar.tsx
frontend/src/components/Navbar/UserInfoName/: UserInfoName.test.tsx  UserInfoName.tsx  index.ts
frontend/src/components/Navbar/UserPicture/: UserPicture.test.tsx  UserPicture.tsx
frontend/src/components/Root/: Root.test.tsx  Root.tsx
frontend/src/components/SinglePageApp/: SinglePageApp.test.tsx  SinglePageApp.tsx  index.ts
frontend/src/components/SinglePageApp/Navbar/: Navbar.test.tsx
frontend/src/components/SinglePageApp/Navbar/UserInfoName/: UserInfoName.test.tsx  UserInfoName.tsx
frontend/src/components/SinglePageApp/Navbar/UserPicture/: UserPicture.test.tsx  UserPicture.tsx  index.ts
frontend/src/components/SinglePageApp/Workspace/: Workspace.test.tsx  Workspace.tsx
frontend/src/hooks/: User.ts
frontend/src/stores/: UserContext.ts
frontend/src/types/: api.d.ts
frontend/src/types/github/: User.d.ts
src/prai/: __init__.py  app.py
src/prai/models/github/: __init__.py  pull_request__get.py  user.py
src/prai/routers/api/github/: pull_request.py  user.py  users.py
src/prai/services/github/: config.py  make_request.py  provider.py
tests/: factories.py  test_app.py
tests/factories/: __init__.py  pull_request.py  user.py
tests/services/github/: test_github_request_provider.py  test_provider.py
